--- a/src/pages/error/error.css
+++ b/src/pages/error/error.css
@@ -2,7 +2,7 @@
     padding: 80px 0;
     background-color: white;
     width: 100%;
-    min-height: 100vh;
+    min-height: 500px;
     color: black;
 }
 
